--- a/gb/20/11/2/n12518843.md
+++ b/gb/20/11/2/n12518843.md
@@ -1,17 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ypsgci320/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ypsgci320/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ypsgci320/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ypsgci320/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ypsgci320/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ypsgci320/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ypsgci320/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ypsgci320/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ypsgci320/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ypsgci320/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ypsgci320/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ypsgci320/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ypsgci320/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ypsgci320/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ypsgci320/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ypsgci320/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/ypsgci320/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ypsgci320/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/ypsgci320/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ypsgci320/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ypsgci320/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ypsgci320/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ypsgci320/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ypsgci320/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ypsgci320/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ypsgci320/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ypsgci320/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ypsgci320/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ypsgci320/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ypsgci320/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ypsgci320/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ypsgci320/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ypsgci320/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ypsgci320/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ypsgci320/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ypsgci320/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ypsgci320/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ypsgci320/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ypsgci320/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ypsgci320/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ypsgci320/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ypsgci320/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ypsgci320/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ypsgci320/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ypsgci320/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ypsgci320/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ypsgci320/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>尚未取得建照预售屋“建案秒杀” 桃市府：违法就罚</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/11/466986-600x400.jpg" />
 <h6>内政部会同行政院消费者保护处、桃园市政府法务局、地政局、建管处等相关单位，前往青埔及A7等开发区等4处销售中心进行联合稽查。（桃园地政局提供）
 </h6>
 <hr>
-<p>【大纪元2020年11月02日讯】（大纪元记者徐乃义台湾桃园报导）购买<ahref="https://github.com/ypsgci320/djy/blob/master/gb/tag/%E9%A2%84%E5%94%AE%E5%B1%8B.md#1">预售屋</a>要“排队订屋”？桃园房市人口成长、公共建设等题材，“脱北者”移居桃园形成风潮，加上后疫情时代低利环境与热钱再度推升房价，尤其是青埔等热区，预售屋推案开价调涨频传。全台各地传出建案业者刻意营造“建案秒杀”、“排队订屋”等话题吸引消费者注意，甚至尚未取得建造执照就开始销售，为了遏止预售屋投资炒作歪风，维护市场交易秩序，内政部会同行政院消费者保护处、桃园市政府<ahref="https://github.com/ypsgci320/djy/blob/master/gb/tag/%E6%B3%95%E5%8A%A1%E5%B1%80.md#1">法务局</a>、地政局、建管处等相关单位，前往青埔及A7等开发区等4处销售中心进行联合稽查，宣导业者销售过程应注意的法令规定。</p>
-<figure id="attachment_12518846" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/11/466987.jpg"><img class="size-medium wp-image-12518846" src="https://i.epochtimes.com/assets/uploads/2020/11/466987-450x337.jpg" alt="" width="450" b="337" /></a><figcaption class="wp-caption-text">尚未取得建照就释出预推案讯息，这种“预购”、“潜销”的销售。（桃园地政局提供）</figcaption></figure>
-<p>内政部指出，主要查核重点包括确认<ahref="https://github.com/ypsgci320/djy/blob/master/gb/tag/%E9%A2%84%E5%94%AE%E5%B1%8B.md#1">预售屋</a>建案是否在尚未取得建造执照前就擅自销售、使用购屋预约单（俗称红单）情形、刊登广告有无不实或误导消费者认知、预售屋买卖契约是否符合内政部规定的应记载及不得记载事项、代销人员执业过程是否符合法令规范、接待中心或样品屋是否取得杂项执照等6大事项。预售屋建案除由地方政府持续办理例行性稽查作业外，仍将视不动产交易市场状况，由中央与地方政府共同合作进行不定期联合稽查，以有效遏止炒作歪风，健全市场交易秩序。</p>
-<figure id="attachment_12518847" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/11/466988.jpg"><img class="size-medium wp-image-12518847" src="https://i.epochtimes.com/assets/uploads/2020/11/466988-450x337.jpg" alt="" width="450" b="337" /></a><figcaption class="wp-caption-text">建商尚未取得建造执照就开始销售。（桃园地政局提供）</figcaption></figure>
+<p>【大纪元2020年11月02日讯】（大纪元记者徐乃义台湾桃园报导）购买<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%A2%84%E5%94%AE%E5%B1%8B.md#1">预售屋</a>要“排队订屋”？桃园房市人口成长、公共建设等题材，“脱北者”移居桃园形成风潮，加上后疫情时代低利环境与热钱再度推升房价，尤其是青埔等热区，预售屋推案开价调涨频传。全台各地传出建案业者刻意营造“建案秒杀”、“排队订屋”等话题吸引消费者注意，甚至尚未取得建造执照就开始销售，为了遏止预售屋投资炒作歪风，维护市场交易秩序，内政部会同行政院消费者保护处、桃园市政府<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B3%95%E5%8A%A1%E5%B1%80.md#1">法务局</a>、地政局、建管处等相关单位，前往青埔及A7等开发区等4处销售中心进行联合稽查，宣导业者销售过程应注意的法令规定。</p>
+<figure id="attachment_12518846" aria-describedby="caption-attachment-12518846" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/11/466987.jpg"><img class="size-medium wp-image-12518846" src="https://i.epochtimes.com/assets/uploads/2020/11/466987-450x337.jpg" alt="" width="450" b="337" /></a><figcaption id="caption-attachment-12518846" class="wp-caption-text">尚未取得建照就释出预推案讯息，这种“预购”、“潜销”的销售。（桃园地政局提供）</figcaption></figure>
+<p>内政部指出，主要查核重点包括确认<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%A2%84%E5%94%AE%E5%B1%8B.md#1">预售屋</a>建案是否在尚未取得建造执照前就擅自销售、使用购屋预约单（俗称红单）情形、刊登广告有无不实或误导消费者认知、预售屋买卖契约是否符合内政部规定的应记载及不得记载事项、代销人员执业过程是否符合法令规范、接待中心或样品屋是否取得杂项执照等6大事项。预售屋建案除由地方政府持续办理例行性稽查作业外，仍将视不动产交易市场状况，由中央与地方政府共同合作进行不定期联合稽查，以有效遏止炒作歪风，健全市场交易秩序。</p>
+<figure id="attachment_12518847" aria-describedby="caption-attachment-12518847" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/11/466988.jpg"><img class="size-medium wp-image-12518847" src="https://i.epochtimes.com/assets/uploads/2020/11/466988-450x337.jpg" alt="" width="450" b="337" /></a><figcaption id="caption-attachment-12518847" class="wp-caption-text">建商尚未取得建造执照就开始销售。（桃园地政局提供）</figcaption></figure>
 <p>建商或代销业者为营造销售热潮的广告效果，尚未取得建照就释出预推案讯息，这种“预购”、“潜销”的销售方式容易使民众承担资讯不对称的风险。部分建商会在契约书中夹带违法的“二次施工同意书”，二次施工就是违建，不论地区、违建规模及使用情形，都会列为最优先拆除的对象，无论民众购买时是否知情，建管单位获报后都须立即拆除，如有违规事证应向市府提出检举。查核并未发现未取得建照就擅自销售的情形，惟部分销售中心未依规申请杂项执照，建管处已当场要求限期补照。</p>
-<figure id="attachment_12518848" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/11/466989.jpg"><img class="size-medium wp-image-12518848" src="https://i.epochtimes.com/assets/uploads/2020/11/466989-450x290.jpg" alt="" width="450" b="290" /></a><figcaption class="wp-caption-text">桃园地政局提醒，购屋前应详阅契约内容，了解买卖双方权利义务，预售屋应提供至少5天以上的审阅期。（桃园地政局提供）</figcaption></figure>
+<figure id="attachment_12518848" aria-describedby="caption-attachment-12518848" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/11/466989.jpg"><img class="size-medium wp-image-12518848" src="https://i.epochtimes.com/assets/uploads/2020/11/466989-450x290.jpg" alt="" width="450" b="290" /></a><figcaption id="caption-attachment-12518848" class="wp-caption-text">桃园地政局提醒，购屋前应详阅契约内容，了解买卖双方权利义务，预售屋应提供至少5天以上的审阅期。（桃园地政局提供）</figcaption></figure>
 <p>桃园地政局提醒，购屋前应详阅契约内容，了解买卖双方权利义务，预售屋应提供至少5天以上的审阅期，民众可以把契约书带回家慢慢看，如果遇到契约内容与应记载事项未符部分，可要求修改或拒绝签约，不要轻易放弃应有的权利。查核仍发现部分定型化契约内容不符合规定，包括交屋保留款未依规定载明为房地总价5%、停车位未载明高度、未载明水、电、瓦斯管线费用分担方式等缺失，已要求建商限期改正。</p>
 <p>消保官也强调，建商及代销公司都属于消保法中的企业经营者，内政部公告的应记载及不得记载事项，是对消费者权益最低限度之保障，若业者以“个别磋商条款”规避契约责任，订定对消费者不利的契约条款，例如将房地总价5%的交屋保留款磋商到10万、5万甚至没有，民众都应拒绝，如果建商徒有磋商之名而无磋商之实，强迫消费者签订不利的“个别磋商条款”，可向桃园消费者服务中心提出申诉，建商若拒不改正最高可处50万元罚锾，并连续处罚。◇</p>
 <p>责任编辑：李悦</p>
@@ -20,48 +20,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/17/3/8/n8887969.md#1">桃园预售屋体检 买卖定型化契约皆不合格</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/17/6/11/n9251197.md#1">台实价登录将修法 预售屋买卖30日内申报</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/19/3/6/n11093179.md#1">让预售屋资讯透明 绿委吁速审实价登录2.0</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/19/5/3/n11231786.md#1">台内政部修预售屋法 6大变革11/1上路</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/19/5/26/n11280594.md#1">变身直播一哥赚钱有方 陈昭荣连预售屋也卖</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/20/n12489049.md#1">台预售屋陷阱多 契约违规逾9成</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/11/2/n12518812.md#1">元智大学化材系首创2020纪念威士忌传承仪式</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/11/2/n12518774.md#1">桃捷招募54名新血起薪最高4万1</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/11/2/n12518668.md#1">Costco APP再升级  行动支付全新登场</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/11/2/n12518619.md#1">8旬老夫妻拍摄婚纱车抛锚  桃园平镇警助圆梦</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/3/8/n8887969.md#1">桃园预售屋体检 买卖定型化契约皆不合格</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/6/11/n9251197.md#1">台实价登录将修法 预售屋买卖30日内申报</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/3/6/n11093179.md#1">让预售屋资讯透明 绿委吁速审实价登录2.0</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/5/3/n11231786.md#1">台内政部修预售屋法 6大变革11/1上路</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/5/26/n11280594.md#1">变身直播一哥赚钱有方 陈昭荣连预售屋也卖</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/10/20/n12489049.md#1">台预售屋陷阱多 契约违规逾9成</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680757.md#1">全台最大彩色海芋花海 与你芋见爱神</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680775.md#1">争取最佳好青年 身障青年比赞“我好棒！”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680378.md#1">2022桃捷挺桃猿  与Rakuten Girls一起“捷乘应猿”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680297.md#1">桃园老翁遭骗入会员 操作ATM遇警保老本</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/3/n10358233.md#1" target="_blank">共产暴政录：土改是中共邪恶基因的实践</a></li><li><a href="https://github.com/ypsgci320/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/10/18/n3709213.md#1" target="_blank">在东方健康博览会上见到李洪志师父</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/14/n10637364.md#1" target="_blank">中共“文艺沙皇”被囚9年 晚年反思悲剧终局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/3/15/n4663033.md#1" target="_blank">食道癌晚期的绝症患者获救</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/9/30/n12442859.md#1">《圣经》与《推背图》预言的应验与变换5</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/26/n12503625.md#1">麦克阿瑟的战后岁月及临终前的预言</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/11/n12468150.md#1">再生少年胜五郎 说出冥界转生过程钜细靡遗</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/30/n12512315.md#1">像罗宇这样的红二代</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/9/19/n12415906.md#1">朋友隔天才回讯息 这行为犯了多大禁忌？</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/11/1/n12517575.md#1">【大陆新闻解毒】时事小品：中国人民组织起来了</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/9/28/n12437702.md#1">【思想领袖】林赛：美左派破坏圣像 犹如文革</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/31/n12515233.md#1">【重播】最后冲刺 川普及夫人访宾州五地演讲</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/30/n12514672.md#1">【新闻看点】备战动员？五中公报泄习心头大患</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/31/n12515225.md#1">【拍案惊奇】美大选“神算”开口 中共甩锅新招</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/30/n12514872.md#1">与罗晋庆祝结婚两周年 唐嫣素颜出镜甜蜜微笑</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/30/n12514872.md#1">与罗晋庆祝结婚两周年 唐嫣素颜出镜甜蜜微笑</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/29/n12512090.md#1">明星追星 江疏影贺偶像玄彬获奖“实至名归”</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/31/n12516017.md#1">“007”詹姆斯·邦德饰演者肖恩·康纳利去世</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/30/n12513453.md#1">Rain与TWICE玩黑手党游戏 粉丝Momo共舞好紧张</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/30/n12512257.md#1">崔智友产后5月速开工 抱着婴儿现身母爱爆棚</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/30/n12514896.md#1">车评：双色多变化 2020 Nissan Kicks SR</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/30/n12513083.md#1">英男童5点起床习惯被取笑 却救全家人性命</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/30/n12512744.md#1">曾多次准确预测大选 犹太拉比：川普会连任</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/30/n12513272.md#1">濒死男子敲天堂大门 被告知时辰未到</a></li>
-<li><a href="https://github.com/ypsgci320/djy/blob/master/gb/20/10/30/n12514662.md#1">干咳不是感冒是秋燥？1穴位立即止咳</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679009.md#1">【秦鹏直播】为李莹发声险被抓 王圣强：不怕消失</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679468.md#1">【探索时分】叙利亚雇佣兵能帮上俄罗斯吗？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679596.md#1">【远见快评】传普京重大让步 乌克兰中立秘辛</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ypsgci320/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ypsgci320/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/11/2/n12518843.htm">尚未取得建照预售屋“建案秒杀” 桃市府：违法就罚</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/11/2/n12518843.htm">尚未取得建照预售屋“建案秒杀” 桃市府：违法就罚</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ypsgci320/djy/blob/master/gb/20/11/2/n12518843.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ypsgci320/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypsgci320/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ypsgci320/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ypsgci320/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ypsgci320/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypsgci320/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ypsgci320/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypsgci320/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ypsgci320/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypsgci320/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ypsgci320/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypsgci320/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ypsgci320/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypsgci320/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ypsgci320/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypsgci320/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ypsgci320/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypsgci320/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ypsgci320/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypsgci320/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ypsgci320/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypsgci320/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ypsgci320/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypsgci320/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ypsgci320/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypsgci320/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ypsgci320/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypsgci320/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ypsgci320/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypsgci320/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ypsgci320/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypsgci320/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ypsgci320/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypsgci320/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ypsgci320/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypsgci320/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ypsgci320/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypsgci320/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ypsgci320/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypsgci320/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ypsgci320/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypsgci320/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ypsgci320/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypsgci320/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ypsgci320/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypsgci320/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ypsgci320/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ypsgci320/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/20/11/2/n12518843.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
